--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+absl-py==2.2.2
 cloudpickle==3.1.0
 contourpy==1.3.1
 cycler==0.12.1
@@ -6,11 +7,13 @@ Farama-Notifications==0.0.4
 filelock==3.17.0
 fonttools==4.56.0
 fsspec==2025.2.0
+grpcio==1.71.0
 gymnasium==1.0.0
 imageio==2.37.0
 imageio-ffmpeg==0.6.0
 Jinja2==3.1.5
 kiwisolver==1.4.8
+Markdown==3.8
 MarkupSafe==3.0.2
 matplotlib==3.10.1
 moviepy==2.1.2
@@ -21,6 +24,7 @@ opencv-python==4.10.0.84
 packaging==24.2
 pillow==10.4.0
 proglog==0.1.10
+protobuf==6.30.2
 pygame==2.6.1
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
@@ -28,6 +32,8 @@ python-dotenv==1.0.1
 six==1.17.0
 style==1.1.0
 sympy==1.13.1
+tensorboard==2.19.0
+tensorboard-data-server==0.7.2
 tetris-gymnasium==0.2.1
 torch==2.6.0
 torchaudio==2.6.0
@@ -35,3 +41,4 @@ torchvision==0.21.0
 tqdm==4.67.1
 typing_extensions==4.12.2
 update==0.0.1
+Werkzeug==3.1.3
